add habit, stats, setting and create new habit

--- a/app.json
+++ b/app.json
@@ -37,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        // Exclude the hooks directory from Expo Router's scanning
+        "unstable_exclude": ["**/hooks/**"]
+      }
     }
   }
 }
