fix google sign-in bug for production

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -57,3 +57,8 @@ expo.useLegacyPackaging=false
 
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=my-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=12345678
+MYAPP_UPLOAD_KEY_PASSWORD=12345678
